<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Camara">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10dp">

            <TextView
                android:id="@+id/txtCTitulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/camara"
                android:textColor="@color/blue1"
                android:textSize="30sp"
                android:gravity="center"/>

            <ImageView
                android:id="@+id/imgvCImagen"
                android:layout_width="match_parent"
                android:layout_height="450dp"
                android:layout_margin="10dp"
                android:background="@color/blue1" />

            <Button
                android:id="@+id/btnCTomarFoto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/tomarfoto"
                android:backgroundTint="@color/blue1"/>

            <Button
                android:id="@+id/btnCGuardarFoto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/guardar"
                android:backgroundTint="@color/blue1"/>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>